# controllers/contactsControllers.js
@@ -4,11 +4,10 @@ import HttpError from '../helpers/HttpError.js';
 export const getAllContacts = async (req, res, next) => {
 	console.log({ user: req.user });
 	try {
-		const favorite = req.query.favorite;
+		// const favorite = req.query.favorite;
 
 		const contacts = await Contact.find({
 			owner: req.user.id,
-			favorite: favorite,
 		});
 		res.send(contacts);
 	} catch (error) {
